--- a/src/assets/styles/navigation.scss
+++ b/src/assets/styles/navigation.scss
@@ -1,25 +1,45 @@
-.navigation-container {
-  min-width: 250px;
-  margin-top: 1em;
+@import 'variables';
 
-  .navigation-group {
+.navigation-container {
+  width: 100%;
+  background-color: $color-default;
+  height: 70px;
+
+  @media only screen and (max-width: 800px) {
+    height: 125px;
+  }
+
+  .navigation {
+    height: 100%;
     display: flex;
-    margin: 0;
-    padding: 0;
+    justify-content: center;
+
+    @media only screen and (max-width: 800px) {
+      flex-direction: column;
+    }
+
     list-style: none;
 
     .navigation-item {
-      flex: 1;
-      font-size: 1.5em;
+      display: flex;
+      align-items: center;
+      margin: 0 2em;
+      font-size: 1.125em;
+
+      @media only screen and (max-width: 800px) {
+        margin: 0 3em;
+        font-size: 1.5em;
+        justify-content: center;
+      }
 
       a {
-        color: limegreen;
+        color: black;
         text-decoration: none;
 
         transition: color 0.3s ease;
 
         &:hover {
-          color: black;
+          color: $color-primary;
         }
       }
 
@@ -29,12 +49,9 @@
 
       &.item-active {
         a {
-          color: black;
+          color: $color-secondary;
         }
       }
     }
-  }
-
-  .navigation-social {
   }
 }
