--- a/src/assets/styles/icon.scss
+++ b/src/assets/styles/icon.scss
@@ -1,7 +1,21 @@
+@import 'variables';
+
 .icon {
   svg {
+    display: flex;
+    align-items: center;
     height: 28px;
     width: 28px;
+
+    path {
+      transition: fill 0.3s ease;
+    }
+
+    &:hover {
+      path {
+        fill: $color-primary !important;
+      }
+    }
   }
 
   &.icon-medium {
