Positioning background properly on smaller screens

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -7,6 +7,10 @@
   background-position: bottom;
   background-repeat: no-repeat;
 
+  @media only screen and (max-width: 800px) {
+    background-position: center;
+  }
+
   .title {
     margin: 0;
   }
