--- a/src/assets/styles/alert.scss
+++ b/src/assets/styles/alert.scss
@@ -1,13 +1,16 @@
+@import 'variables';
+
 .alert {
   width: 100%;
   min-height: 75px;
   padding: 1em;
+  border-radius: 4px;
 
   &.alert-info {
   }
 
   &.alert-warning {
-    background-color: rgba(limegreen, 1);
+    background-color: yellow;
     color: black;
   }
 
