little code changes

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   background-image: url('../vectors/cyborg-unsubscribed.svg');
   background-position: bottom;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
 
   @media only screen and (max-width: 800px) {
     background-position: center;
