Adding dark styles and adding articles to the mix but forcing it to render no articles alert

--- a/src/assets/styles/alert.scss
+++ b/src/assets/styles/alert.scss
@@ -12,6 +12,11 @@
   &.alert-warning {
     background-color: yellow;
     color: black;
+    svg {
+      path {
+        fill: black !important;
+      }
+    }
   }
 
   .title-icon {
