--- a/src/assets/styles/articles.scss
+++ b/src/assets/styles/articles.scss
@@ -4,24 +4,18 @@
   width: 100%;
   margin: 0 auto;
 
-  .navigation {
-    justify-content: left;
-    padding: 0 10%;
-
-    .navigation-item {
-      margin-left: 0;
-    }
-  }
-
   .articles {
-    width: 80%;
     margin: 0 auto;
     .articles-title {
-      margin-bottom: 0.5em;
       background: $color-default url('../vectors/cyborg-message-sent.svg') no-repeat right;
       background-size: inherit;
       height: 200px;
       border-radius: 0 0 4px 4px;
+
+      @media only screen and (max-width: 800px) {
+        background-size: contain;
+        background-position: right;
+      }
 
       .articles-title-content {
         padding: 0.85em;
@@ -29,6 +23,10 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        @media only screen and (max-width: 800px) {
+          padding-left: 0;
+        }
 
         h1 {
           margin: 0;
@@ -39,7 +37,13 @@
       }
     }
 
+    .alert {
+      border-radius: 0;
+    }
+
     .article-list {
+      width: 80%;
+      margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 25px;
