--- a/src/assets/styles/navigation.scss
+++ b/src/assets/styles/navigation.scss
@@ -33,13 +33,13 @@
       }
 
       a {
-        color: black;
+        color: white;
         text-decoration: none;
 
         transition: color 0.3s ease;
 
         &:hover {
-          color: $color-primary;
+          color: $color-secondary;
         }
       }
 
@@ -49,7 +49,7 @@
 
       &.item-active {
         a {
-          color: $color-secondary;
+          color: $color-primary;
         }
       }
     }
