--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,3 +3,4 @@ $color-secondary: #2be7b3;
 $color-default: rgba(gray, 0.2);
 $color-default-hover: rgba(gray, 0.4);
 $color-dark: #181a1b;
+$color-default-solid: #2d3031;
