--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -23,8 +23,8 @@
 
     .credentials-container {
       height: 60px;
-      background-color: $color-primary;
-      color: $color-secondary;
+      background-color: $color-secondary;
+      color: $color-primary;
       @media only screen and (max-width: 800px) {
         height: 100px;
       }
