--- a/src/assets/styles/article.scss
+++ b/src/assets/styles/article.scss
@@ -67,6 +67,11 @@
       a {
         color: $color-primary;
       }
+
+      pre {
+        border-radius: 4px;
+        background-color: rgba($color-secondary, 0.2) !important;
+      }
     }
   }
 }
