--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,12 @@ a {
 html, body, #root {
   height: 100vh;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
+#root > .MuiPaper-root {
+  flex-grow: 1;
+}
